--- a/index.html
+++ b/index.html
@@ -86,21 +86,21 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>8 September 2002</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Salem, Tamil Nadu,India</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>College:</strong> <span>SRM University</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>No of Publications :</strong> <span>1</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong> No of intership: </strong> <span>2</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday : </strong> <span>8 September 2002</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>City : </strong> <span>Salem, Tamil Nadu,India</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>College : </strong> <span>SRM University</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>No of Publications : </strong> <span>1</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong> No of intership : </strong> <span>2</span></li>
                   <li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>prathapsg@hotmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Year of graduation: </strong> <span>2024 May</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Over Seas Intership</strong> <span>1</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age : </strong> <span>21</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree : </strong> <span>Bachelors</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email : </strong> <span>prathapsg@hotmail.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Year of graduation : </strong> <span>2024 May</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Over Seas Intership : </strong> <span>1</span></li>
                   
 
                   
